<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_centerVertical="false"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="422dp"
            android:layout_height="240dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/jj" />

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:text="@string/tv_header"
            android:textSize="18dp"
            android:paddingStart="35dp"
            android:layout_marginTop="5dp"
            android:textColor="#545454"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/t0"
            android:textSize="8dp"
            android:layout_marginBottom="12dp"
            android:paddingStart="35dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="15dp"
            android:paddingStart="35dp"

            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Reuters"
            android:textColor="#67aded"
            android:paddingStart="35dp"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"

            />

        <TextView
            android:paddingStart="35dp"
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/small"
            android:textSize="7dp"

            android:layout_marginBottom="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="16dp"
            android:paddingStart="35dp"
            android:layout_marginTop="0dp"

            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/header"
            android:paddingStart="35dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text"
            android:textSize="14dp"
            android:paddingStart="35dp"
            />


        <TextView
            android:id="@+id/tv_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulleted_list"
            android:textColor="#67aded"
            android:textSize="12dp"
            android:layout_marginTop="7dp"
            android:paddingStart="40dp"
            />



        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/t1"
            android:paddingStart="35dp"
            android:layout_marginTop="7dp"
            android:textSize="14dp"
            android:layout_marginBottom="9dp"
            />


        <TextView
            android:id="@+id/textV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/t2"
            android:paddingStart="35dp"
            android:textSize="14dp"
            android:layout_marginBottom="23dp"
            />

    </LinearLayout>

</ScrollView>